--- a/ios/smena/Info.plist
+++ b/ios/smena/Info.plist
@@ -26,6 +26,8 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Это приложение использует ваше местоположение, чтобы предоставить вам актуальные данные и функции во время работы с приложением.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
