--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.82.0",
-    "@react-navigation/drawer": "^7.5.10",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "axios": "^1.12.2",
     "react": "19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-native": "0.82.0",
     "react-native-config": "^1.5.9",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-get-location": "^6.0.0",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.17.1",
