--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
+    "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
+    "mobx": "^6.15.0",
+    "mobx-react": "^9.2.1",
+    "mobx-react-lite": "^4.1.1",
     "react": "19.1.1",
+    "react-content-loader": "^7.1.1",
     "react-hook-form": "^7.65.0",
     "react-native": "0.82.0",
     "react-native-config": "^1.5.9",
@@ -24,6 +29,7 @@
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.17.1",
+    "react-native-svg": "^15.14.0",
     "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
